fixed column alignment

--- a/magazine/static/magazine/css/anthology_style.css
+++ b/magazine/static/magazine/css/anthology_style.css
@@ -126,21 +126,20 @@ Sections
 
 .col1.left {
   overflow: scroll;
-  overflow: -moz-scrollbars-vertical; 
   float: left;
-  width: 60%;
-  left: 6%;
-  padding: 0% 5%;
+  width: 50%;
+  left: 0%;
+  padding: 1% 3%;
   height: 85%;
   z-index: 2;
   border: double black 3px;
+  margin: 0% 5%;
 }
 
 .col2.left {
   float: left;
-  width: 40%;
-  left: 65%;
-  /*background-color: green;*/
+  width: 35%;
+  left: 60%;
   height: 85%;
   z-index: 2;
   display: flex;
